--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
+      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
    </head>
 
    <body>
@@ -43,14 +43,20 @@
 
       <main>
          <div class="profile">
-            <img src="./img/boredape.png" alt="Chris's Portrait" class="profile__portrait" width="150px" />
-            <h1>Hello World!</h1>
-            <p>
-               My name is Chris. I am a
-               <span style="background-color:black ;color:orange">&#60;web&#62;</span>
-               developer from Berlin.
-            </p>
-            <a href="#">Check out some of my code</a>
+            <div class="profile__image">
+               <img src="./img/boredape.png" alt="Chris's Portrait" class="profile__portrait" width="150px" />
+            </div>
+            <div class="profile__bio">
+               <h1 class="centered-phrase">Hello World!</h1>
+
+               <p class="centered-phrase">
+                  My name is Chris. I am a
+                  <span style="background-color:black ;color:orange">&#60;web&#62;</span>
+                  developer from Berlin.
+                  <br>
+                  <a href="#">Check out some of my code</a>
+               </p>
+            </div>
          </div>
          <!-- <div>
             <a href="#">example Link</a>
