missing css & html content
added missing html tags for responsive behavior on index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
    </head>
 
    <body>
@@ -47,9 +47,9 @@
                <img src="./img/boredape.png" alt="Chris's Portrait" class="profile__portrait" width="150px" />
             </div>
             <div class="profile__bio">
-               <h1 class="centered-phrase">Hello World!</h1>
+               <h1>Hello World!</h1>
 
-               <p class="centered-phrase">
+               <p>
                   My name is Chris. I am a
                   <span style="background-color:black ;color:orange">&#60;web&#62;</span>
                   developer from Berlin.
@@ -57,12 +57,9 @@
                   <a href="#">Check out some of my code</a>
                </p>
             </div>
+
+            <br />
          </div>
-         <!-- <div>
-            <a href="#">example Link</a>
-            <button type="button">Don't Click</button>
-         </div> -->
-         <br />
       </main>
       <hr />
       <footer class="page-footer">
