--- a/work.html
+++ b/work.html
@@ -1,74 +1,39 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
    <head>
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>My Portfolio</title>
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
-      <link
-         rel="stylesheet"
-         type="text/css"
-         href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-      />
-      <link
-         href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
-         rel="stylesheet"
-      />
-      <link
-         rel="stylesheet"
-         type="text/css"
-         href="./css/style.production.css"
-      />
+      <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
+      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
    </head>
+
    <body>
       <header class="page-header">
-         <img
-            src="./img/logo.png"
-            class="header-logo page-header__item"
-            alt="logo"
-         />
+         <img src="./img/logo.png" class="header-logo page-header__item" alt="logo" />
          <nav class="page-header__item">
             <ul role="menubar" class="navigation-list">
                <li role="presentation">
-                  <a
-                     href="index.html"
-                     role="menuitem"
-                     class="navigation-list__item"
-                     >Home</a
-                  >
+                  <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
                </li>
                <li role="presentation">
-                  <a
-                     href="about.html"
-                     role="menuitem"
-                     class="navigation-list__item"
-                     >About Me</a
-                  >
+                  <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
                </li>
                <li role="presentation">
-                  <a
-                     href="work.html"
-                     role="menuitem"
-                     class="navigation-list__item navigation-list__item--active"
-                     >Work</a
-                  >
+                  <a href="work.html" role="menuitem"
+                     class="navigation-list__item navigation-list__item--active">Work</a>
                </li>
                <li role="presentation">
-                  <a
-                     href="./contact.html"
-                     role="menuitem"
-                     class="navigation-list__item"
-                     >Contact
+                  <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact
                   </a>
                </li>
                <li role="presentation">
-                  <a
-                     href="./bonus-task.html"
-                     role="menuitem"
-                     class="navigation-list__item"
-                     >Bonus-Task
+                  <a href="./bonus-task.html" role="menuitem" class="navigation-list__item">Bonus-Task
                   </a>
                </li>
             </ul>
@@ -141,19 +106,15 @@
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
-            <a href="https://github.com/ChrisDOE7" target="_blank"
-               ><img src="./img/github.svg" alt="Github Profile"
-            /></a>
-            <a href="https://twitter.com/willywonka_NFT" target="_blank"
-               ><img src="./img/twitter.svg" alt="Twitter Profile"
-            /></a>
-            <a
-               href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/"
-               target="_blank"
-               ><img src="./img/linkedin.svg" alt="LinkedIn Profile"
-            /></a>
+            <a href="https://github.com/ChrisDOE7" target="_blank"><img src="./img/github.svg"
+                  alt="Github Profile" /></a>
+            <a href="https://twitter.com/willywonka_NFT" target="_blank"><img src="./img/twitter.svg"
+                  alt="Twitter Profile" /></a>
+            <a href="https://www.linkedin.com/in/christopher-de-oliveira-eberhard-a44267235/" target="_blank"><img
+                  src="./img/linkedin.svg" alt="LinkedIn Profile" /></a>
          </div>
       </footer>
       <script src="js/tota11y.min.js"></script>
    </body>
+
 </html>
