tota11y  script deactivated

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             </div>
             <div class="profile__bio">
                <h1>Hello World!</h1>
-
                <p>
                   My name is Chris. I am a
                   <span style="background-color:black ;color:orange">&#60;web&#62;</span>
@@ -57,7 +56,6 @@
                   <a href="#">Check out some of my code</a>
                </p>
             </div>
-
             <br />
          </div>
       </main>
@@ -74,7 +72,7 @@
          </div>
       </footer>
 
-      <script src="js/tota11y.min.js"></script>
+      <!-- <script src="js/tota11y.min.js"></script> -->
    </body>
 
 </html>
