--- a/work.html
+++ b/work.html
@@ -114,7 +114,7 @@
                   src="./img/linkedin.svg" alt="LinkedIn Profile" /></a>
          </div>
       </footer>
-      <script src="js/tota11y.min.js"></script>
+      <!-- <script src="js/tota11y.min.js"></script> -->
    </body>
 
 </html>
