--- a/about.html
+++ b/about.html
@@ -1613,7 +1613,7 @@
                   src="./img/linkedin.svg" alt="LinkedIn Profile" /></a>
          </div>
       </footer>
-      <script src="js/tota11y.min.js"></script>
+      <!-- <script src="js/tota11y.min.js"></script> -->
    </body>
 
 </html>
