--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@
                   <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact
                   </a>
                </li>
-               <li role="presentation">
+               <!-- <li role="presentation">
                   <a href="./bonus-task.html" role="menuitem" class="navigation-list__item">Bonus-Task
                   </a>
-               </li>
+               </li> -->
             </ul>
          </nav>
       </header>
@@ -1579,7 +1579,7 @@
                         "mobile-first" method, I wrote my first responsive
                         website including small javascript content. You can find
                         it in my
-                        <a href="http://https://github.com/ChrisDOE7">Github</a>
+                        <a href="https://github.com/ChrisDOE7" target="blank">Github</a>
                         profile.
                      </td>
                   </tr>
