--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
                      class="navigation-list__item navigation-list__item--active">Contact
                   </a>
                </li>
-               <li role="presentation">
+               <!-- <li role="presentation">
                   <a href="./bonus-task.html" role="menuitem" class="navigation-list__item">Bonus-Task
                   </a>
-               </li>
+               </li> -->
             </ul>
          </nav>
       </header>
