--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                <li role="presentation">
                   <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact
                   </a>
-               </li>
+                  <!-- </li>
                <li role="presentation">
                   <a href="./bonus-task.html" role="menuitem" class="navigation-list__item">Bonus-Task
                   </a>
-               </li>
+               </li> -->
             </ul>
          </nav>
       </header>
@@ -44,7 +44,7 @@
       <main>
          <div class="profile">
             <div class="profile__image">
-               <img src="./img/boredape.png" alt="Chris's Portrait" class="profile__portrait" width="150px" />
+               <img src="./img/boredape.png" alt="Chris's Portrait" class="profile__portrait" />
             </div>
             <div class="profile__bio">
                <h1>Hello World!</h1>
