--- a/work.html
+++ b/work.html
@@ -32,10 +32,10 @@
                   <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact
                   </a>
                </li>
-               <li role="presentation">
+               <!-- <li role="presentation">
                   <a href="./bonus-task.html" role="menuitem" class="navigation-list__item">Bonus-Task
                   </a>
-               </li>
+               </li> -->
             </ul>
          </nav>
       </header>
