quick fix of wrong commenting

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                <li role="presentation">
                   <a href="./contact.html" role="menuitem" class="navigation-list__item">Contact
                   </a>
-                  <!-- </li>
-               <li role="presentation">
+               </li>
+               <!-- <li role="presentation">
                   <a href="./bonus-task.html" role="menuitem" class="navigation-list__item">Bonus-Task
                   </a>
                </li> -->
