--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
+      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
    </head>
 
    <body>
@@ -54,8 +54,8 @@
             <br />
             <a href="mailto:ceberhard@live.de">Contact me</a>
          </div>
-         <div>
-            <form action="/contact-form-action" method="post">
+         <div class="form">
+            <form action="/contact-form-action" class="form__input" method="post">
                <label for="name">Name <span style="color:#d90000">*</span></label>
                <br />
                <input type="text" name="user_name" id="name" placeholder="Jon Doe" required />
