--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
+      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
    </head>
 
    <body>
@@ -44,7 +44,7 @@
       <main>
          <div class="profile">
             <div class="profile__image">
-               <img src="./img/boredape.png" alt="Chris's Portrait" class="profile__portrait" />
+               <img src="./img/profile-picture.PNG" alt="Chris's Portrait" class="profile__portrait" />
             </div>
             <div class="profile__bio">
                <h1>Hello World!</h1>
@@ -53,7 +53,7 @@
                   <span style="background-color:black ;color:orange">&#60;web&#62;</span>
                   developer from Berlin.
                   <br>
-                  <a href="#">Check out some of my code</a>
+                  <a href="https://github.com/ChrisDOE7" target="_blank">Check out some of my code</a>
                </p>
             </div>
             <br />
@@ -72,7 +72,7 @@
          </div>
       </footer>
 
-      <!-- <script src="js/tota11y.min.js"></script> -->
+      <script src="js/tota11y.min.js"></script>
    </body>
 
 </html>
