--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
+      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
    </head>
 
    <body>
@@ -45,11 +45,11 @@
             <h1 class="centered-article">Work</h1>
             <div class="project-list">
                <!-- Grid items will live here -->
-               <div class="project-list__item">
+               <div class="project-list__item" id="preview-box">
                   <h2>Mobile web app</h2>
                   <p>
                      Within this project, I was responsible for the frontend.
-                     It’s written in React.js. Additionally, I've created the
+                     It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
                   <a href="#">See project on GitHub</a>
@@ -58,7 +58,7 @@
                   <h2>Game development</h2>
                   <p>
                      Within this project, I was responsible for the frontend.
-                     It’s written in React.js. Additionally, I've created the
+                     It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
                   <a href="#">See project on GitHub</a>
@@ -67,7 +67,7 @@
                   <h2>Web app</h2>
                   <p>
                      Within this project, I was responsible for the frontend.
-                     It’s written in React.js. Additionally, I've created the
+                     It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
                   <a href="#">See project on GitHub</a>
@@ -76,7 +76,7 @@
                   <h2>CMS</h2>
                   <p>
                      Within this project, I was responsible for the backend.
-                     It’s written in React.js. Additionally, I've created the
+                     It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
                   <a href="#">See project on GitHub</a>
@@ -85,7 +85,7 @@
                   <h2>Bot</h2>
                   <p>
                      Within this project, I was responsible for the backend.
-                     It’s written in React.js. Additionally, I've created the
+                     It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
                   <a href="#">See project on GitHub</a>
@@ -94,7 +94,7 @@
                   <h2>Portfolio</h2>
                   <p>
                      Within this project, I was responsible for the frontend.
-                     It’s written in React.js. Additionally, I've created the
+                     It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
                   <a href="#">See project on GitHub</a>
@@ -114,7 +114,7 @@
                   src="./img/linkedin.svg" alt="LinkedIn Profile" /></a>
          </div>
       </footer>
-      <!-- <script src="js/tota11y.min.js"></script> -->
+      <script src="js/tota11y.min.js"></script>
    </body>
 
 </html>
