--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
    </head>
 
    <body>
@@ -39,7 +39,6 @@
             </ul>
          </nav>
       </header>
-      <hr />
       <main>
          <div>
             <h1>My Contacts</h1>
@@ -76,7 +75,6 @@
             </form>
          </div>
       </main>
-      <hr />
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
