--- a/work.html
+++ b/work.html
@@ -10,7 +10,7 @@
       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
       <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
-      <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+      <link rel="stylesheet" type="text/css" href="./css/style.production.css" />
    </head>
 
    <body>
@@ -39,7 +39,6 @@
             </ul>
          </nav>
       </header>
-      <hr />
       <main>
          <section>
             <h1 class="centered-article">Work</h1>
@@ -52,7 +51,7 @@
                      It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
-                  <a href="#">See project on GitHub</a>
+                  <a href="#" class="portfolio-link">See project on GitHub</a>
                </div>
                <div class="project-list__item">
                   <h2>Game development</h2>
@@ -61,7 +60,7 @@
                      It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
-                  <a href="#">See project on GitHub</a>
+                  <a href="#" class="portfolio-link">See project on GitHub</a>
                </div>
                <div class="project-list__item">
                   <h2>Web app</h2>
@@ -70,7 +69,7 @@
                      It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
-                  <a href="#">See project on GitHub</a>
+                  <a href="#" class="portfolio-link">See project on GitHub</a>
                </div>
                <div class="project-list__item">
                   <h2>CMS</h2>
@@ -79,7 +78,7 @@
                      It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
-                  <a href="#">See project on GitHub</a>
+                  <a href="#" class="portfolio-link">See project on GitHub</a>
                </div>
                <div class="project-list__item">
                   <h2>Bot</h2>
@@ -88,7 +87,7 @@
                      It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
-                  <a href="#">See project on GitHub</a>
+                  <a href="#" class="portfolio-link">See project on GitHub</a>
                </div>
                <div class="project-list__item">
                   <h2>Portfolio</h2>
@@ -97,12 +96,11 @@
                      It&#145s written in React.js. Additionally, I've created the
                      HTML and CSS templates.
                   </p>
-                  <a href="#">See project on GitHub</a>
+                  <a href="#" class="portfolio-link">See project on GitHub</a>
                </div>
             </div>
          </section>
       </main>
-      <hr />
       <footer class="page-footer">
          <p>Find me on</p>
          <div class="social-media">
